--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -3,11 +3,19 @@
 {% block title %}Log-in{% endblock %}
 
 {% block content %}
- <h1>Log-in</h1>
- <p>Please, use the following form to log-in:</p>
- <form method="post">
-     {{ form.as_p }}
-     {% csrf_token %}
-     <p><input type="submit" value="Log in"></p>
- </form>
+     <h1>Log-in</h1>
+     <p>Please, use the following form to log-in:</p>
+     <form method="post">
+         {{ form.as_p }}
+         {% csrf_token %}
+         <p><input type="submit" value="Log in"></p>
+     </form>
+    <div class="social">
+         <ul>
+             <li class="google">
+                 <a href="{% url "social:begin" "google-oauth2" %}">
+                 Sign in with Google</a>
+             </li>
+         </ul>
+    </div>
 {% endblock %}
