--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -19,6 +19,9 @@
         <li {% if section == "people" %}class="selected"{% endif %}>
           <a href="#">People</a>
         </li>
+         <li {% if section == "images" %}class="selected"{% endif %}>
+        <a href="{% url "images:list" %}">Images</a>
+         </li>
       </ul>
     {% endif %}
     <span class="user">
@@ -44,5 +47,14 @@
     {% block content %}
     {% endblock %}
   </div>
+  <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+  <script>
+    const csrftoken = Cookies.get('csrftoken');
+    document.addEventListener('DOMContentLoaded', (event) => {
+    // DOM загружена
+    {% block domready %}
+    {% endblock %}
+     })
+ </script>
 </body>
 </html>
